@@ -1,13 +1,18 @@
 package com.Oscar.Proyecto_Final.service;
 
-import com.Oscar.Proyecto_Final.dto.ProductoDTO;
+import com.Oscar.Proyecto_Final.dto.*;
 import com.Oscar.Proyecto_Final.model.*;
 import com.Oscar.Proyecto_Final.repository.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
+import org.springframework.transaction.annotation.Transactional;
+import com.Oscar.Proyecto_Final.exception.BadRequestException;
+import java.util.Optional;
 
 import java.io.IOException;
+import java.time.LocalDate;
+import java.time.format.DateTimeFormatter;
 import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
@@ -22,6 +27,9 @@ public class ProductoService {
     private final CaracteristicaRepository caracteristicaRepository;
     private final ImagenRepository imagenRepository;
     private final CloudinaryService cloudinaryService;
+    private final ValoracionRepository valoracionRepository;
+    private final UsuarioRepository usuarioRepository;
+    private final ReservaRepository reservaRepository;
 
     public List<ProductoDTO> listarTodos() {
         return productoRepository.findAll().stream()
@@ -36,16 +44,52 @@ public class ProductoService {
     }
 
     public ProductoDTO mapearDTO(Producto producto) {
+        List<String> imagenes = producto.getImagenes().stream()
+                .map(Imagen::getUrl)
+                .collect(Collectors.toList());
+
+        List<String> caracteristicas = producto.getCaracteristicas().stream()
+                .map(Caracteristica::getNombre)
+                .collect(Collectors.toList());
+
+        List<PoliticaDTO> politicas = producto.getPoliticas().stream()
+                .map(p -> PoliticaDTO.builder()
+                        .titulo(p.getTitulo())
+                        .descripcion(p.getDescripcion())
+                        .build())
+                .collect(Collectors.toList());
+
+        List<ValoracionDTO> valoraciones = producto.getValoraciones().stream()
+                .map(v -> ValoracionDTO.builder()
+                        .puntuacion(v.getPuntuacion())
+                        .comentario(v.getComentario())
+                        .usuario(v.getUsuario().getNombre() + " " + v.getUsuario().getApellido())
+                        .fecha(v.getFecha().toString())
+                        .build())
+                .collect(Collectors.toList());
+
+        double promedio = producto.getValoraciones().stream()
+                .mapToInt(Valoracion::getPuntuacion)
+                .average()
+                .orElse(0.0);
+
         return ProductoDTO.builder()
                 .id(producto.getId())
                 .nombre(producto.getNombre())
                 .descripcion(producto.getDescripcion())
                 .direccion(producto.getDireccion())
+                .ciudad(producto.getCiudad())
                 .categoria(producto.getCategoria().getNombre())
-                .imagenes(producto.getImagenes().stream().map(Imagen::getUrl).toList())
-                .caracteristicas(producto.getCaracteristicas().stream().map(Caracteristica::getNombre).toList())
+                .imagenes(imagenes)
+                .caracteristicas(caracteristicas)
+                .politicas(politicas)
+                .valoraciones(valoraciones)
+                .puntuacionPromedio(promedio)
+                .cantidadValoraciones(producto.getValoraciones().size())
                 .build();
     }
+
+
 
     public Producto guardarProducto(ProductoDTO dto, List<MultipartFile> archivos) throws IOException {
         if (productoRepository.existsByNombre(dto.getNombre())) {
@@ -64,6 +108,7 @@ public class ProductoService {
                 .nombre(dto.getNombre())
                 .descripcion(dto.getDescripcion())
                 .direccion(dto.getDireccion())
+                .ciudad(dto.getCiudad())
                 .categoria(categoria)
                 .caracteristicas(caracteristicas)
                 .fechaCreacion(LocalDateTime.now())
@@ -87,29 +132,69 @@ public class ProductoService {
         return guardado;
     }
 
+    @Transactional
     public Producto actualizarProducto(Long id, ProductoDTO dto, List<MultipartFile> archivos) throws IOException {
         Producto producto = obtenerPorId(id);
 
+        // 1. Actualizar campos básicos
         producto.setNombre(dto.getNombre());
         producto.setDescripcion(dto.getDescripcion());
         producto.setDireccion(dto.getDireccion());
+        producto.setCiudad(dto.getCiudad());
 
+        // 2. Actualizar categoría
         Categoria categoria = categoriaRepository.findByNombre(dto.getCategoria())
                 .orElseThrow(() -> new RuntimeException("Categoría no encontrada"));
-
-        List<Caracteristica> caracteristicas = dto.getCaracteristicas().stream()
-                .map(nombre -> caracteristicaRepository.findByNombre(nombre)
-                        .orElseThrow(() -> new RuntimeException("Característica no encontrada: " + nombre)))
-                .toList();
-
         producto.setCategoria(categoria);
+
+        // 3. Actualizar características
+        List<Caracteristica> caracteristicas = dto.getCaracteristicas().stream()
+                .map(nombre -> caracteristicaRepository.findByNombre(nombre))
+                .filter(Optional::isPresent)
+                .map(Optional::get)
+                .collect(Collectors.toList());
         producto.setCaracteristicas(caracteristicas);
 
-        productoRepository.save(producto);
+        // 4. Actualizar políticas - Versión mejorada
+        if (dto.getPoliticas() != null && !dto.getPoliticas().isEmpty()) {
+            // Eliminar políticas existentes (orphanRemoval se encargará de la eliminación en BD)
+            producto.getPoliticas().clear();
 
-        imagenRepository.deleteAll(producto.getImagenes());
+            // Agregar nuevas políticas
+            dto.getPoliticas().forEach(pDto -> {
+                Politica politica = new Politica();
+                politica.setTitulo(pDto.getTitulo());
+                politica.setDescripcion(pDto.getDescripcion());
+                politica.setProducto(producto);
+                producto.getPoliticas().add(politica);
+            });
+        } else {
+            producto.getPoliticas().clear();
+        }
 
-        List<Imagen> imagenes = archivos.stream()
+        // 5. Manejo de imágenes (opcional)
+        if (archivos != null && !archivos.isEmpty()) {
+            manejarImagenes(producto, archivos);
+        }
+
+        return productoRepository.save(producto);
+    }
+
+    private void manejarImagenes(Producto producto, List<MultipartFile> archivos) throws IOException {
+        // Eliminar imágenes existentes
+        if (!producto.getImagenes().isEmpty()) {
+            producto.getImagenes().forEach(img -> {
+                try {
+                    cloudinaryService.eliminarImagen(img.getUrl());
+                } catch (IOException e) {
+                    System.err.println("Error al eliminar imagen: " + e.getMessage());
+                }
+            });
+            imagenRepository.deleteAll(producto.getImagenes());
+        }
+
+        // Subir nuevas imágenes
+        List<Imagen> nuevasImagenes = archivos.stream()
                 .map(file -> {
                     try {
                         String url = cloudinaryService.subirImagen(file);
@@ -117,12 +202,11 @@ public class ProductoService {
                     } catch (IOException e) {
                         throw new RuntimeException("Error al subir imagen", e);
                     }
-                }).toList();
+                })
+                .collect(Collectors.toList());
 
-        imagenRepository.saveAll(imagenes);
-        producto.setImagenes(imagenes);
-
-        return producto;
+        imagenRepository.saveAll(nuevasImagenes);
+        producto.setImagenes(nuevasImagenes);
     }
 
     public void eliminarProducto(Long id) {
@@ -136,9 +220,88 @@ public class ProductoService {
                 .orElseThrow(() -> new RuntimeException("Producto no encontrado"));
     }
 
-    public List<ProductoDTO> buscarProductos(String nombre, LocalDateTime fechaInicio, LocalDateTime fechaFin) {
-        return productoRepository.buscarConFiltros(nombre, fechaInicio, fechaFin).stream()
+    public List<ProductoDTO> listarPorCategoria(Long categoriaId) {
+        return productoRepository.findByCategoriaId(categoriaId).stream()
                 .map(this::mapearDTO)
                 .collect(Collectors.toList());
+    }
+
+    public List<ProductoDTO> buscarPorCiudad(String ciudad) {
+        return productoRepository.findByCiudadContainingIgnoreCase(ciudad).stream()
+                .map(this::mapearDTO)
+                .collect(Collectors.toList());
+    }
+
+    public List<ProductoDTO> buscarDisponiblesPorCiudadYFechas(String ciudad, LocalDate fechaInicio, LocalDate fechaFin) {
+        return productoRepository.buscarDisponiblesPorCiudadYFechas(ciudad, fechaInicio, fechaFin).stream()
+                .map(this::mapearDTO)
+                .collect(Collectors.toList());
+    }
+
+    public void valorarProducto(Long productoId, int puntuacion, String comentario, Long usuarioId) {
+        if (puntuacion < 1 || puntuacion > 5) {
+            throw new IllegalArgumentException("La puntuación debe estar entre 1 y 5 estrellas.");
+        }
+
+        Producto producto = obtenerPorId(productoId);
+        Usuario usuario = usuarioRepository.findById(usuarioId)
+                .orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
+
+        boolean puedeValorar = reservaRepository.existsByUsuarioAndProductoAndFechaFinBefore(
+                usuario, producto, LocalDate.now()
+        );
+
+        if (!puedeValorar) {
+            throw new BadRequestException("Solo puedes valorar un producto si ya terminaste una reserva.");
+
+        }
+
+        Valoracion valoracion = Valoracion.builder()
+                .producto(producto)
+                .usuario(usuario)
+                .puntuacion(puntuacion)
+                .comentario(comentario)
+                .fecha(LocalDateTime.now())
+                .build();
+
+        valoracionRepository.save(valoracion);
+    }
+
+    public List<ValoracionDTO> listarValoracionesDTO(Long productoId) {
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm");
+        return valoracionRepository.findByProductoIdOrderByFechaDesc(productoId).stream()
+                .map(v -> ValoracionDTO.builder()
+                        .puntuacion(v.getPuntuacion())
+                        .comentario(v.getComentario())
+                        .usuario(v.getUsuario().getNombre() + " " + v.getUsuario().getApellido())
+                        .fecha(v.getFecha().format(formatter))
+                        .build())
+                .collect(Collectors.toList());
+    }
+    public ValoracionesConPromedioDTO listarValoracionesConPromedio(Long productoId) {
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm");
+        List<Valoracion> valoraciones = valoracionRepository.findByProductoIdOrderByFechaDesc(productoId);
+
+        List<ValoracionDTO> valoracionesDTO = valoraciones.stream()
+                .map(v -> ValoracionDTO.builder()
+                        .puntuacion(v.getPuntuacion())
+                        .comentario(v.getComentario())
+                        .usuario(v.getUsuario().getNombre() + " " + v.getUsuario().getApellido())
+                        .fecha(v.getFecha().format(formatter))
+                        .build())
+                .toList();
+
+        double promedio = Math.round(
+                valoraciones.stream()
+                        .mapToInt(Valoracion::getPuntuacion)
+                        .average()
+                        .orElse(0.0) * 10.0
+        ) / 10.0;
+
+        return ValoracionesConPromedioDTO.builder()
+                .valoraciones(valoracionesDTO)
+                .promedio(promedio)
+                .total(valoraciones.size())
+                .build();
     }
 }
